# image-processor

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ImageProcessor.sln  ImageProcessor.vcxproj  ImageProcessor.vcxproj.filters  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
src/: ImageEnhancer.cpp  ImageEnhancer.h  ImageProcessor.cpp  ImageProcessor.h  Readme.md  main.cpp
